# cboreli

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  build_clang.sh
src/: CMakeLists.txt  array_t.h  cbor_header.h  cbor_header_float.cpp  cbor_header_float.h  cbor_header_uint.cpp  cbor_header_uint.h  codec_result.cpp  codec_result.h  data_item.cpp  data_item.h  data_stream.h  data_types.h  decoder.cpp  decoder.h  encoder.cpp  encoder.h  encoder_containers.cpp  encoder_numbers.cpp  encoder_strings.cpp  endian.cpp  endian.h  random_number.h
test/: CMakeLists.txt  codec_verify.h  decoder_tests.h  encoder_tests.h  main.cpp  sabit.h
version/: CMakeLists.txt  version.h  version.h.in
